   autoproj will fall-back to self-built packages if an OS package is not
   provided on *this particular OS/version pair*, even though it exists for
   other OSes or other versions of the same OS.
 * in case the layout selects some packages, partial build commands should not
   forcefully select packages that are not part of the layout at all.

= Version 1.5.2
 * fix ignored_packages and exclude_packages

= Version 1.5.1
 * --no-osdeps disables updating autobuild and autoproj, as it should
 * fixed checking out modules that are not yet checked out
 
= Version 1.5.0
 * the "clean up this  mess" release. Autoproj's main logic is now properly
   split into separate methods instead of being all in a monolitic bin/autoproj
 * autoproj build does not update by default anymore. This was a behaviour
   change that was requested by quite a few users.
 * OS dependencies and normal dependencies are unified. An OS dependency will
   have priority, if one is available on the OS. Otherwise, an autoproj package
   will be searched for.
 * remote package sets have become first-class citizens. The package sets are
   still checked out in .remotes/WEIRD_NAME, but they are then symlinked to
   autoproj/remotes/package_set_name for manipulation and inspection.
 * a lot of fixes related to partial builds and partial package selections
 * fixed wrong generation of env.sh files in some cases (mostly related to
   partial builds)

= Version 1.4.4
 * really fix the bug mentioned in 1.4.3

= Version 1.4.3
 * quickfix installations that have no layouts

= Version 1.4.2
 * change the order in which package sets are considered for version control
   information in the manifest. The package set list needs now to be defined
   from the most generic to the least generic
 * define a shell script called 'ruby' in prefix/bin to call the right ruby
   interpreter. This makes the "#! /usr/bin/env ruby" she-bang line working
   on interpreters that are not called 'ruby'.